# week9/shimmy/src/models/restaurant.dao.js
@@ -1,7 +1,7 @@
 import { pool } from "../../config/db.config.js";
 import { BaseError } from "../../config/error.js";
 import { status } from "../../config/response.status.js";
-import { insertRestaurantSql, getRestaurantSql } from "./restaurant.sql.js";
+import { insertRestaurantSql, getRestaurantSql, insertReviewSql, getReviewSql } from "./restaurant.sql.js";
 
 // User 데이터 삽입, userId 리턴
 export const addRestaurantDao = async (data) => {
@@ -24,23 +24,39 @@ export const addRestaurantDao = async (data) => {
     }
 }
 
-export const setRegionDao = async (restaurantId, regionId) => {
-    try {
-        const conn = await pool.getConnection();
-        await pool.query(setRegionSql, [regionId, restaurantId]);
-        conn.release();
-        return;
-    } catch (err) {
-        throw new BaseError(status.PARAMETER_IS_WRONG);
-    }
-}
-
 export const getRestaurantDao = async (restaurantId) => {
     try {
         const conn = await pool.getConnection();
         const [restaurant] = await pool.query(getRestaurantSql, restaurantId);
         conn.release();
         return restaurant;
+    } catch (err) {
+        throw new BaseError(status.PARAMETER_IS_WRONG);
+    }
+}
+
+export const addReviewDao = async (data) => {
+    try {
+        const conn = await pool.getConnection();
+        const review = await pool.query(insertReviewSql, [
+            data.userId,
+            data.restaurantId,
+            data.body,
+            data.score
+        ]);
+        conn.release();
+        return review[0].insertId;
+    } catch (err) {
+        throw new BaseError(status.PARAMETER_IS_WRONG);
+    }
+}
+
+export const getReviewDao = async (data) => {
+    try {
+        const conn = await pool.getConnection();
+        const [review] = await pool.query(getReviewSql, data);
+        conn.release();
+        return review;
     } catch (err) {
         throw new BaseError(status.PARAMETER_IS_WRONG);
     }
