# week9/shimmy/src/routes/restaurant.route.js
@@ -1,8 +1,10 @@
 import express from 'express';
 import asyncHandler from 'express-async-handler';
 
-import { addRestaurantCnt } from '../controllers/restaurant.controller.js';
+import { addRestaurantCnt, addReviewCnt } from '../controllers/restaurant.controller.js';
 
 export const restaurantRouter = express.Router();
 
 restaurantRouter.post('/', asyncHandler(addRestaurantCnt));
+
+restaurantRouter.post('/:restaurantId/review', asyncHandler(addReviewCnt));
