# week9/shimmy/swagger/restaurant.swagger.yaml
@@ -83,3 +83,92 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+  /restaurant/{restaurantId}/review:
+    post:
+      tags:
+        - review
+      summary: 리뷰 추가
+      parameters:
+      - name: restaurantId
+        in: path
+        required: true
+        type: integer
+        description: 식당 ID
+      - name: review
+        in: body
+        required: true
+        schema:
+          properties:
+            userId:
+              type: integer
+              description: 유저 id
+              example: 6
+            body:
+              type: string
+              description: 리뷰 내용
+              example: 정말 맛있어요
+            score:
+              type: integer
+              description: 별점
+              example: 10
+      responses:
+        '200':
+          description: 리뷰 추가 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: {
+                  "body": "너무 맛나다",
+                  "score": 10,
+                  "restaurantName": "성화해장국"
+                }
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
